Implemented markov caching. Way fast.